fix(ci): install OpenCode CLI before running tests

--- a/.github/workflows/test-agents.yml
+++ b/.github/workflows/test-agents.yml
@@ -28,6 +28,16 @@ jobs:
           cache: 'npm'
           cache-dependency-path: 'evals/framework/package-lock.json'
       
+      - name: Install OpenCode CLI
+        run: |
+          curl -fsSL https://raw.githubusercontent.com/OpenAgentsInc/opencode/main/install.sh | bash
+          echo "$HOME/.opencode/bin" >> $GITHUB_PATH
+      
+      - name: Verify OpenCode installation
+        run: |
+          export PATH="$HOME/.opencode/bin:$PATH"
+          opencode --version
+      
       - name: Install dependencies
         working-directory: evals/framework
         run: npm install
@@ -37,7 +47,9 @@ jobs:
         run: npm run build
       
       - name: Run OpenAgent smoke test
-        run: npm run test:ci:openagent
+        run: |
+          export PATH="$HOME/.opencode/bin:$PATH"
+          npm run test:ci:openagent
         env:
           CI: true
       
@@ -65,6 +77,16 @@ jobs:
           cache: 'npm'
           cache-dependency-path: 'evals/framework/package-lock.json'
       
+      - name: Install OpenCode CLI
+        run: |
+          curl -fsSL https://raw.githubusercontent.com/OpenAgentsInc/opencode/main/install.sh | bash
+          echo "$HOME/.opencode/bin" >> $GITHUB_PATH
+      
+      - name: Verify OpenCode installation
+        run: |
+          export PATH="$HOME/.opencode/bin:$PATH"
+          opencode --version
+      
       - name: Install dependencies
         working-directory: evals/framework
         run: npm install
@@ -74,7 +96,9 @@ jobs:
         run: npm run build
       
       - name: Run OpenCoder smoke test
-        run: npm run test:ci:opencoder
+        run: |
+          export PATH="$HOME/.opencode/bin:$PATH"
+          npm run test:ci:opencoder
         env:
           CI: true
       
